--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 html{
     font-size: 16px;
-    background-image: url("bac.jpg");
+    background-image: url("./images/bac.jpg");
    
     background-size:contain;
    
